# dotai

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: ARCHITECTURE.md  CATALOG.md  SCHEMAS.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: env.rs  files.rs  mod.rs  paths.rs  scan.rs  search.rs  watch.rs
src/catalog/: claude-code.ts  claude-desktop.ts  copilot.ts  index.ts  types.ts
src/components/: AboutDialog.tsx  ConflictDialog.tsx  EnvVarsPanel.tsx  ProjectsPanel.tsx  SearchPanel.tsx  TopBar.tsx
src/lib/: ad-hoc.test.ts  ad-hoc.ts  backup.ts  codemirror-refs.ts  docs-links.ts  editor-extensions.ts  format.ts  local-io.ts  markdown.test.ts  markdown.ts  open-ref.test.ts  open-ref.ts  preferences-store.ts  projects-store.ts  refs.test.ts  refs.ts  sync-store.ts  tauri.ts  watcher.ts
src/schemas/: claude-code-settings.schema.json  claude-desktop-config.schema.json  claude-keybindings.schema.json  copilot-settings.schema.json  index.ts  mcp-config.schema.json
src/state/: buffers.ts  lint.ts  projects.ts  selection.ts  sync.ts  viewMode.ts  watcher.ts
src/styles/: globals.css
src/sync/: api.test.ts  api.ts  exclusions.test.ts  exclusions.ts  index.ts  manifest.test.ts  manifest.ts  slugify.test.ts  (+4 more)
(+39 files in other folders)
