[package]
name = "dotai"
version = "0.1.0"
description = "Cross-platform AI config manager"
authors = ["Paul McIlreavy"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "dotai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
walkdir = "2"
notify = "6"
notify-debouncer-full = "0.3"
tempfile = "3"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
